--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,13 +1,11 @@
 .header {
-  border: 1px solid red;
   width: 100%;
-  height: 60px;
+  height: 100px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -15,9 +13,51 @@
 }
 
 .header__title {
-  margin-right: 8px;
-  color: white;
+  color: #fbb440;
   text-shadow: 0 5px 8px black;
   font-size: 40px;
+  margin: 0 0 45px;
+}
+
+.header__title_simple {
+  color: #fff;
+}
+
+.header__button {
+  color: #fbb440;
+  text-shadow: 0 5px 8px black;
+  font-size: 40px;
+}
+
+.header__button_simple {
+  color: #fff;
+}
+
+.switches__wrapper {
+  max-width: 170px;
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+}
+
+@media screen and (max-width: 800px) {
+  .header {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    height: 200px;
+  }
 }
 /*# sourceMappingURL=Header.css.map */
