--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,16 +1,49 @@
+@import '../../utils/variables';
+
 .header {
-  border: 1px solid red;
   width: 100%;
-  height: 60px;
+  height: 100px;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
   margin-bottom: 40px;
 }
 
 .header__title {
-  margin-right: 8px;
-  color: white;
-  text-shadow: 0 5px 8px rgb(0, 0, 0);
+  color: $basic-color;
+  text-shadow: $basic-text-shadow;
   font-size: 40px;
+  margin: 0 0 45px;
+}
+
+.header__title_simple {
+  color: $simple-color;
+}
+
+.header__button {
+  color: $basic-color;
+  text-shadow: $basic-text-shadow;
+  font-size: 40px;
+}
+
+.header__button_simple {
+  color: $simple-color;
+}
+
+.switches__wrapper {
+  max-width: 170px;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+}
+
+@media screen and (max-width: 800px) {
+  .header {
+    flex-direction: column;
+    height: 200px;
+  }
+
+
 }
