fix(header) text shift

--- a/src/components/NavMaterial/NavMaterial.css
+++ b/src/components/NavMaterial/NavMaterial.css
@@ -1,3 +1,17 @@
+.NavMaterial__wrapper {
+  max-width: 190px;
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+}
+
 .nav__button {
   margin: 0;
   padding: 0;
