feat(boxShadows) add all params

--- a/src/components/AboutAuthor/_about__text.scss
+++ b/src/components/AboutAuthor/_about__text.scss
@@ -16,6 +16,7 @@
 
 .about__text_simple {
   -webkit-text-stroke: 0;
+  background-color: rgba($color: #ffffff, $alpha: .08);
 }
 
 .about__default {
