--- a/src/components/AboutAuthor/AboutAuthor.css
+++ b/src/components/AboutAuthor/AboutAuthor.css
@@ -9,7 +9,6 @@
       grid-template-columns: minmax(275px, 30%) auto;
   width: auto;
   margin: 0 80px 40px;
-  background: #fff;
   background: -webkit-gradient(linear, left bottom, right top, from(rgba(255, 255, 255, 0.5)), to(rgba(255, 255, 255, 0.2)));
   background: linear-gradient(to right top, rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 0.2));
   border-radius: 1.5rem;
@@ -17,6 +16,12 @@
           box-shadow: -20px 25px 30px 6px rgba(0, 0, 0, 0.5);
   -webkit-backdrop-filter: blur(0.1rem);
           backdrop-filter: blur(0.1rem);
+}
+
+.about__wrapper_simple {
+  background: transparent;
+  -webkit-backdrop-filter: none;
+          backdrop-filter: none;
 }
 
 .about__left-block {
@@ -172,6 +177,7 @@
 
 .about__text_simple {
   -webkit-text-stroke: 0;
+  background-color: rgba(255, 255, 255, 0.08);
 }
 
 .about__author {
