--- a/src/components/AboutAuthor/AboutAuthor.scss
+++ b/src/components/AboutAuthor/AboutAuthor.scss
@@ -11,7 +11,6 @@ $button-margin-hover: 3px;
   grid-template-columns: minmax(275px, 30%) auto;
   width: auto;
   margin: 0 80px 40px;
-  background: #fff;
   background: linear-gradient(
     to right top,
     rgba(255, 255, 255, 0.5),
@@ -20,6 +19,11 @@ $button-margin-hover: 3px;
   border-radius: 1.5rem;
   box-shadow: -20px 25px 30px 6px rgba(0,0,0,0.5);
   backdrop-filter: blur(0.1rem);
+}
+
+.about__wrapper_simple {
+  background: transparent;
+  backdrop-filter: none;
 }
 
 .about__left-block {
