--- a/src/components/AboutAuthor/AboutAuthor.css
+++ b/src/components/AboutAuthor/AboutAuthor.css
@@ -302,4 +302,14 @@
     margin-right: 20px;
   }
 }
+
+@media screen and (max-width: 500px) {
+  .about__wrapper {
+    margin-left: 5px;
+    margin-right: 5px;
+  }
+  .about__right-block {
+    padding: 15px 3px 3px;
+  }
+}
 /*# sourceMappingURL=AboutAuthor.css.map */
