--- a/src/components/AboutAuthor/AboutAuthor.scss
+++ b/src/components/AboutAuthor/AboutAuthor.scss
@@ -76,6 +76,15 @@ $button-margin-hover: 3px;
     margin-left: 20px;
     margin-right: 20px;
   }
+}
 
+@media screen and (max-width: 500px) {
+  .about__wrapper {
+    margin-left: 5px;
+    margin-right: 5px;
+  }
 
+  .about__right-block {
+    padding: 15px 3px 3px;
+  }
 }
