--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -2,7 +2,7 @@
 
 .header {
   width: 100%;
-  height: 100px;
+  min-height: 100px;
   display: flex;
   justify-content: space-around;
   align-items: center;
@@ -43,8 +43,16 @@
 @media screen and (max-width: 800px) {
   .header {
     flex-direction: column;
-    height: 200px;
   }
 
+  .header__title {
+    margin-bottom: 10px;
+  }
+
+  .switches__wrapper {
+    display: grid;
+    grid-template-columns: auto auto;
+    gap: 20px;
+  }
 
 }
