--- a/src/components/NavMaterial/NavMaterial.css
+++ b/src/components/NavMaterial/NavMaterial.css
@@ -35,4 +35,10 @@
   text-decoration: none;
   color: #000;
 }
+
+@media screen and (max-width: 800px) {
+  .makeStyles-root-1 {
+    display: none !important;
+  }
+}
 /*# sourceMappingURL=NavMaterial.css.map */
