--- a/src/components/NavMaterial/NavMaterial.scss
+++ b/src/components/NavMaterial/NavMaterial.scss
@@ -31,3 +31,9 @@
   text-decoration: none;
   color: #000;
 }
+
+@media screen and (max-width: 800px) {
+  .makeStyles-root-1 {
+    display: none !important;
+  }
+}
