--- a/src/components/NavFooter/NavFooter.css
+++ b/src/components/NavFooter/NavFooter.css
@@ -1,4 +1,7 @@
 .nav-footer {
+  margin: 0;
+  padding: 0;
+  text-indent: 0;
   max-width: 100px;
   width: 100%;
   display: -webkit-box;
@@ -14,5 +17,9 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+}
+
+.nav-footer li {
+  list-style-type: none;
 }
 /*# sourceMappingURL=NavFooter.css.map */
