fix(galaxy fold) more responsive

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -70,4 +70,19 @@
     gap: 20px;
   }
 }
+
+@media screen and (max-width: 351px) {
+  .header__title {
+    font-size: 35px;
+  }
+}
+
+@media screen and (max-width: 310px) {
+  .header__title {
+    font-size: 28px;
+  }
+  .switches__wrapper {
+    gap: 3px;
+  }
+}
 /*# sourceMappingURL=Header.css.map */
