--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -56,3 +56,19 @@
   }
 
 }
+
+@media screen and (max-width: 351px) {
+  .header__title {
+    font-size: 35px;
+  }
+}
+
+@media screen and (max-width: 310px) {
+  .header__title {
+    font-size: 28px;
+  }
+
+  .switches__wrapper {
+    gap: 3px;
+  }
+}
